load("@doxygen//:doxygen.bzl", "doxygen")
load("//tools:dlinear.bzl", "DLINEAR_NAME", "DLINEAR_VERSION")

doxygen(
    name = "docs",
    srcs = [
        "//:README.md",
        "//dlinear:all_srcs",
    ] + glob([
        "_static/*",
        "filters/*",
        "*.md",
    ]),
    aliases = [
        "licence=\"@par Licence:^^\"",
        "constructor{1}=\"Construct a new \\1 object.^^\"",
        "getter{2}=\"Get read-only access to the \\1 of the \\2.^^@return \\1 of the \\2^^\"",
        "getter{3}=\"Get read-only access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^\"",
        "getter{4}=\"Get read-only access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^@see \\4^^\"",
        "checker{2}=\"Check whether the \\2 is \\1.^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^\"",
        "checker{3}=\"Check whether the \\2 is \\1.^^^^\\3^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^\"",
        "checker{4}=\"Check whether the \\2 is \\1.^^^^\\3^^@return true if the \\2 is \\1^^@return false if the \\2 is not \\1^^@see \\4^^\"",
        "getsetter{2}=\"Get read-write access to the \\1 of the \\2.^^@return \\1 of the \\2^^\"",
        "getsetter{3}=\"Get read-write access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^\"",
        "getsetter{4}=\"Get read-write access to the \\1 of the \\2.^^^^\\3^^@return \\1 of the \\2^^@see \\4^^\"",
        "less{1}=\"Compare two \\1 to determine the order between them.^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^\"",
        "less{2}=\"Compare two \\1 to determine the order between them.^^^^\\2^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^\"",
        "less{3}=\"Compare two \\1 to determine the order between them.^^^^\\2^^@param o other object to compare against^^@return true if this object is less than the other object^^@return false if this object is not less than the other object^^@see \\3^^\"",
        "equal_to{1}=\"Compare two \\1 to determine if they are equal.^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^\"",
        "equal_to{2}=\"Compare two \\1 to determine if they are equal.^^^^\\2^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^\"",
        "equal_to{3}=\"Compare two \\1 to determine if they are equal.^^^^\\2^^@param o other object to compare against^^@return true the two object are equal^^@return false if the two objects are different^^@see \\3^^\"",
        "hash{1}=\"Compute the hash of this \\1 using the given @p hasher^^@tparam InvocableHashAlgorithm type of the hash algorithm to use^^@param hasher hash algorithm to use^^\"",
        "hash{2}=\"Compute the hash of this \\1 using the given @p hasher.^^^^\\2^^@tparam InvocableHashAlgorithm type of the hash algorithm to use^^@param hasher hash algorithm to use^^\"",
        "hash{3}=\"Compute the hash of this \\1 using the given @p hasher.^^^^\\2^^@tparam InvocableHashAlgorithm type of the hash algorithm to use^^@param hasher hash algorithm to use^^@see \\3^^\"",
    ],
    configurations = [
        "JAVADOC_AUTOBRIEF = YES",
        "BUILTIN_STL_SUPPORT = YES",
        "EXTRACT_PRIVATE = YES",
        "HIDE_UNDOC_MEMBERS = YES",
        "HIDE_IN_BODY_DOCS = YES",
        "EXCLUDE_SYMBOLS = EdgeHash_ EdgeHash_",
        "EXAMPLE_PATH = example",
        "HAVE_DOT = NO",
    ],
    disable_index = False,
    extract_private = True,
    filter_patterns = ["*.md=\"bash docs/filters/markdown.sh\""],
    full_sidebar = False,
    generate_treeview = True,
    html_colorstyle = "LIGHT",
    html_extra_files = [
        "docs/_static/doxygen-awesome-darkmode-toggle.js",
        "docs/_static/doxygen-awesome-fragment-copy-button.js",
        "docs/_static/doxygen-awesome-interactive-toc.js",
        "docs/_static/doxygen-awesome-paragraph-link.js",
        "docs/_static/doxygen-awesome-tabs.js",
        "docs/_static/mermaid.dist.js",
    ],
    html_extra_stylesheet = [
        "docs/_static/doxygen-awesome.css",
        "docs/_static/mermaid.css",
    ],
    html_footer = "docs/_static/footer.html",
    html_header = "docs/_static/header.html",
    project_brief = "Delta-complete SMT solver for linear programming",
    project_logo = "docs/_static/logo.svg",
    project_name = DLINEAR_NAME,
    project_number = DLINEAR_VERSION,
    use_mathjax = True,
    use_mdfile_as_mainpage = "README.md",
)
