load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")
load("//tools:dlinear.bzl", "DLINEAR_AUTHOR", "DLINEAR_AUTHOR_EMAIL", "DLINEAR_DESCRIPTION", "DLINEAR_HOMEPAGE", "DLINEAR_NAME", "DLINEAR_VERSION")

pkg_tar(
    name = "package_bin",
    srcs = ["//dlinear"],
    extension = "tar.gz",
    mode = "0755",
    package_dir = "usr/bin",
)

pkg_tar(
    name = "package_headers",
    srcs = [
        "//dlinear:generate_version_header",
        "//dlinear:hdrs",
    ],
    extension = "tar.gz",
    package_dir = "usr/include/dlinear",
    deps = [
        "//dlinear/libs:hdrs_tar",
        "//dlinear/parser:hdrs_tar",
        "//dlinear/solver:hdrs_tar",
        "//dlinear/symbolic:hdrs_tar",
        "//dlinear/util:hdrs_tar",
    ],
)

pkg_tar(
    name = "package_sharedlib",
    srcs = ["//dlinear:libdlinear.so"],
    extension = "tar.gz",
    package_dir = "usr/lib",
)

pkg_tar(
    name = "package",
    extension = "tar.gz",
    deps = [
        ":package_bin",
        ":package_headers",
        ":package_sharedlib",
    ],
)

pkg_deb(
    name = "debian",
    architecture = "amd64",
    built_using = "bazel (7.3.2)",
    changelog = "debian/changelog",
    data = ":package",
    depends = select({
        "//tools:dynamic_build": [
            "libstdc++6",
            "libc6",
            "libgcc-s1",
            # External dependencies
            "libbz2-dev",
            "libgmp-dev",
            "libmpfr-dev",
            "libspdlog-dev",
            "picosat",
            "coinor-libclp1",
            "libboost-chrono1.74-dev",
            "libboost-atomic1.74-dev",
            "libboost-container1.74-dev",
            "libboost-system1.74-dev",
            "libboost-regex1.74-dev",
            "libboost-exception1.74-dev",
        ],
        "//tools:static_build": [],
        "//conditions:default": [
            "libstdc++6",
            "libc6",
            "libgcc-s1",
            # External dependencies
            "libbz2-dev",
            "libgmp-dev",
            "libmpfr-dev",
        ],
    }),
    description = DLINEAR_DESCRIPTION,
    homepage = DLINEAR_HOMEPAGE,
    maintainer = "%s <%s>" % (DLINEAR_AUTHOR, DLINEAR_AUTHOR_EMAIL),
    package = DLINEAR_NAME,
    version = "%s" % DLINEAR_VERSION,
)
