load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

pybind_extension(
    name = "_pydlinear",
    srcs = ["pydlinear.cpp"],
    linkopts = ["-Wl,-rpath,'$$ORIGIN'"],
    linkstatic = False,
    deps = [
        "//dlinear:version",
        "//dlinear/api",
        "//dlinear/libs:gmp",
        "//dlinear/libs:qsopt_ex",
        "//dlinear/libs:soplex",
        "//dlinear/solver",
        "//dlinear/symbolic",
        "//dlinear/util:argparser",
        "//dlinear/util:config",
    ],
)

py_library(
    name = "pydlinear",
    srcs = ["__init__.py"],
    data = [":_pydlinear.so"],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "pydlinear_main",
    srcs = ["__main__.py"],
    imports = ["."],
    main = "__main__.py",
    python_version = "PY3",
    deps = [":pydlinear"],
)
