load(":var.bzl", "provide_var")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

bool_flag(
    name = "enable_dynamic_build",
    build_setting_default = False,
)

config_setting(
    name = "dynamic_build",
    flag_values = {":enable_dynamic_build": "True"},
)

config_setting(
    name = "clang_build",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "clang",
    },
)

config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "gcc_build",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "gcc",
    },
)

sh_binary(
    name = "generate_version_header",
    srcs = ["generate_version_header.sh"],
)
