load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("//tools:var.bzl", "make_var_substitution")
load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "pytest_main.py",
    "requirements.txt",
    "ignore_includes.json",
])

# IWYU mappings
filegroup(
    name = "iwyu_mappings",
    srcs = ["mappings.imp"],
)

######################################################################################
# Custom flags that control build behavior
#
# Pass them to bazel with --//tools:<flag>=<value>
# Example:
# bazel build //dlinear --//tools:enable_soplex=False --//tools:enable_qsoptex=True
######################################################################################

bool_flag(
    name = "enable_dynamic_build",
    build_setting_default = False,
)

bool_flag(
    name = "enable_static_build",
    build_setting_default = False,
)

bool_flag(
    name = "enable_qsoptex",
    build_setting_default = True,
)

bool_flag(
    name = "enable_soplex",
    build_setting_default = True,
)

bool_flag(
    name = "enable_pydlinear_build",
    build_setting_default = False,
)

bool_flag(
    name = "enable_fpic_build",
    build_setting_default = False,
)

bool_flag(
    name = "enable_threads_build",
    build_setting_default = False,
)

bool_flag(
    name = "enable_picosat",
    build_setting_default = True,
)

bool_flag(
    name = "enable_cadical",
    build_setting_default = True,
)

bool_flag(
    name = "enable_patchelf",
    build_setting_default = False,
)

###########################################
# Configuration settings
###########################################

config_setting(
    name = "dynamic_build",
    flag_values = {":enable_dynamic_build": "True"},
)

config_setting(
    name = "static_build",
    flag_values = {":enable_static_build": "True"},
)

config_setting(
    name = "pydlinear_build",
    flag_values = {":enable_pydlinear_build": "True"},
)

config_setting(
    name = "fpic_build",
    flag_values = {":enable_fpic_build": "True"},
)

config_setting(
    name = "threads_build",
    flag_values = {":enable_threads_build": "True"},
)

config_setting(
    name = "enabled_qsoptex",
    flag_values = {":enable_qsoptex": "True"},
)

config_setting(
    name = "enabled_soplex",
    flag_values = {":enable_soplex": "True"},
)

config_setting(
    name = "enabled_picosat",
    flag_values = {":enable_picosat": "True"},
)

config_setting(
    name = "enabled_cadical",
    flag_values = {":enable_cadical": "True"},
)

config_setting(
    name = "enabled_patchelf",
    flag_values = {":enable_patchelf": "True"},
)

config_setting(
    name = "clang_build",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "clang",
    },
)

config_setting(
    name = "gcc_build",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "gcc",
    },
)

config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "release",
    values = {"compilation_mode": "opt"},
)

###########################################
# Version header script
###########################################

sh_binary(
    name = "generate_version_header",
    srcs = ["generate_version_header.sh"],
)

###########################################
# Make variable substitution toolchain
###########################################
make_var_substitution(
    name = "make_var_substitution",
)

py_binary(
    name = "bash_autocomplete",
    srcs = ["bash_autocomplete.py"],
    main = "bash_autocomplete.py",
    python_version = "PY3",
    deps = [
        requirement("shtab"),
    ],
)
