load("//tools:dlinear.bzl", "dlinear_cc_library")

package(default_visibility = ["//benchmark:__subpackages__"])

dlinear_cc_library(
    name = "bench_config",
    srcs = [
        "BenchArgParser.cpp",
        "BenchConfig.cpp",
        "ConfigFileReader.cpp",
    ],
    hdrs = [
        "BenchArgParser.h",
        "BenchConfig.h",
        "ConfigFileReader.h",
    ],
    deps = [
        "//dlinear:version",
        "//dlinear/util:exception",
        "//dlinear/util:filesystem",
        "//dlinear/util:logging",
        "@argparse",
    ],
)

dlinear_cc_library(
    name = "info_gatherer",
    srcs = ["InfoGatherer.cpp"],
    hdrs = ["InfoGatherer.h"],
    deps = [
        "//dlinear/libs:qsopt_ex",
        "//dlinear/libs:soplex",
        "//dlinear/smt2",
        "//dlinear/util:config",
        "//dlinear/util:exception",
        "//dlinear/util:infinity",
    ],
)
