load("//tools:dlinear.bzl", "dlinear_cc_library")
load("//tools:cpplint.bzl", "cpplint")

package(default_visibility = [
    "//dlinear:__subpackages__",
    "//pydlinear:__subpackages__",
    "//test:__subpackages__",
])

dlinear_cc_library(
    name = "api",
    srcs = ["api.cpp"],
    hdrs = ["api.h"],
    deps = [
        "//dlinear/solver:context",
        "//dlinear/symbolic",
        "//dlinear/util:box",
        "//dlinear/util:config",
        "//dlinear/util:exception",
    ],
)

cpplint()
