load("//tools:dlinear.bzl", "dlinear_cc_library")
load("//tools:cpplint.bzl", "cpplint")

package(default_visibility = [
    "//benchmark:__subpackages__",
    "//dlinear:__subpackages__",
    "//pydlinear:__subpackages__",
    "//test:__subpackages__",
    "//third_party:__subpackages__",
])

dlinear_cc_library(
    name = "gmp",
    srcs = ["gmp.cpp"],
    hdrs = ["gmp.h"],
    deps = ["@gmp//:gmpxx"],
)

dlinear_cc_library(
    name = "soplex",
    hdrs = ["soplex.h"],
    deps = [
        "//dlinear/util:exception",
        "//dlinear/util:logging",
    ] + select({
        "//tools:enabled_soplex": ["@soplex"],
        "//conditions:default": [],
    }),
)

dlinear_cc_library(
    name = "qsopt_ex",
    srcs = ["qsopt_ex.cpp"],
    hdrs = ["qsopt_ex.h"],
    deps = [
        "@gmp//:gmpxx",
    ] + select({
        "//tools:enabled_qsoptex": ["@qsopt_ex"],
        "//conditions:default": [],
    }),
)

cpplint()
