load("//tools:dlinear.bzl", "dlinear_cc_binary", "dlinear_cc_library")
load("//tools:cpplint.bzl", "cpplint")
load("//tools/lexyacc:lexyacc.bzl", "gen_lex", "gen_yacc")

gen_lex(
    name = "scanner",
    src = "scanner.ll",
    source_out = "scanner.ll.cpp",
    visibility = ["//visibility:private"],
)

gen_yacc(
    name = "parser",
    src = "parser.yy",
    extra_outs = ["location.hh"],
    header_out = "parser.yy.hpp",
    source_out = "parser.yy.cpp",
    visibility = ["//visibility:private"],
)

dlinear_cc_library(
    name = "mps_lib",
    srcs = [":scanner"],
)

dlinear_cc_binary(
    name = "mps",
    srcs = [
        "Driver.cpp",
        "test.cpp",
        ":parser",
        ":scanner",
        "Driver.h",
        "scanner.h",
    ],
)

cpplint()
