load("//tools:dlinear.bzl", "dlinear_cc_binary", "dlinear_cc_library")
load("//tools:cpplint.bzl", "cpplint")
load("//tools/lexyacc:lexyacc.bzl", "gen_lex", "gen_yacc")

gen_lex(
    name = "scanner",
    src = "scanner.ll",
    hdr = "scanner.h",
    source_out = "scanner.ll.cpp",
    visibility = ["//visibility:private"],
)

gen_yacc(
    name = "parser",
    src = "parser.yy",
    extra_outs = ["location.hh"],
    header_out = "parser.yy.hpp",
    source_out = "parser.yy.cpp",
    visibility = ["//visibility:private"],
)

dlinear_cc_library(
    name = "mps_data",
    srcs = [
        "BoundType.cpp",
        "Sense.cpp",
    ],
    hdrs = [
        "BoundType.h",
        "Sense.h",
    ],
    deps = ["//dlinear/util:exception"],
)

dlinear_cc_library(
    name = "mps",
    srcs = [
        "Driver.cpp",
        ":parser",
        ":scanner",
    ],
    hdrs = [
        "Driver.h",
    ],
    deps = [
        ":mps_data",
        "//dlinear/solver",
        "//dlinear/symbolic",
        "//dlinear/util:exception",
        "//dlinear/util:logging",
        "//dlinear/util:timer",
    ],
)

dlinear_cc_binary(
    name = "test",
    srcs = [
        "test.cpp",
    ],
    deps = [
        ":mps",
        "//dlinear/symbolic",
        "//dlinear/util:config",
        "//dlinear/util:exception",
        "//dlinear/util:logging",
    ],
)

cpplint()
