load("//tools:cpplint.bzl", "cpplint")
load("//tools:dlinear.bzl", "dlinear_cc_library")
load("//tools/lexyacc:lexyacc.bzl", "gen_lex", "gen_yacc")

package(default_visibility = [
    "//benchmark:__subpackages__",
    "//dlinear:__subpackages__",
    "//pydlinear:__subpackages__",
    "//test:__subpackages__",
])

gen_lex(
    name = "scanner",
    src = "scanner.ll",
    hdr = "scanner.h",
    source_out = "scanner.ll.cpp",
    visibility = ["//visibility:private"],
)

gen_yacc(
    name = "parser",
    src = "parser.yy",
    extra_outs = ["location.hh"],
    header_out = "parser.yy.hpp",
    source_out = "parser.yy.cpp",
    visibility = ["//visibility:private"],
)

dlinear_cc_library(
    name = "mps_data",
    srcs = [
        "BoundType.cpp",
        "Sense.cpp",
    ],
    hdrs = [
        "BoundType.h",
        "Sense.h",
    ],
    deps = [
        "//dlinear/util:exception",
        "//dlinear/util:logging",
    ],
)

dlinear_cc_library(
    name = "mps",
    srcs = [
        "Driver.cpp",
        ":parser",
        ":scanner",
    ],
    hdrs = ["Driver.h"],
    local_defines = select({
        "//tools:dynamic_build": ["DLINEAR_PYDLINEAR"],
        "//conditions:default": [],
    }),
    deps = [
        ":mps_data",
        "//dlinear/solver:context",
        "//dlinear/symbolic",
        "//dlinear/util:exception",
        "//dlinear/util:logging",
        "//dlinear/util:timer",
        "@flex_lexer",
    ] + select({
        "//tools:dynamic_build": [
            "//dlinear/util:interrupt",
            "//dlinear/util:signal_handler_guard",
        ],
        "//conditions:default": [],
    }),
)

cpplint()
